tests/test_assets/semantic/valid/strings/assignment.cog
string_assignment_ok::() -> void {
    s: u8[6] = "xxxxx";
    s = "hello";
}