tests/test_assets/semantic/invalid/literals/scientific_notation_f32_overflow.cog
scientific_notation_f32_overflow::() -> void {
    value: f32 = 1e39;
}
